--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1802,11 +1802,11 @@ This focused analysis on grade 4 allows us to uncover insights that are specific
     \hline
     \textbf{Model} & \textbf{Demographic parity difference} \\
     \hline
-    RandomForest Classifier & & \\
+    RandomForest Classifier & \\
     \hline
-    LGB Classifier & & \\
+    LGB Classifier & \\
     \hline
-    DecisionTree Classifier & & \\
+    DecisionTree Classifier & \\
     \hline
 \end{tabular}
 
