--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1867,11 +1867,11 @@ Indeed the dataset grew up starting from 6586 rows to the final 142675 rows.
     \hline
     \textbf{Model} & \textbf{Demographic parity difference} \\
     \hline
-    RandomForest Classifier & & \\
+    RandomForest Classifier & \\
     \hline
-    LGB Classifier & & \\
+    LGB Classifier & \\
     \hline
-    DecisionTree Classifier & & \\
+    DecisionTree Classifier & \\
     \hline
 \end{tabular}
 
